Stopgap measure to extend question box

--- a/app/static/css/quiz.css
+++ b/app/static/css/quiz.css
@@ -1,4 +1,4 @@
 #question-container {
-    height: 300px;
+    height: 500px;
     background:	#C0C0C0;
 }
